--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_C_FLAGS "-m32")
 set(CMAKE_CXX_FLAGS "-m32")
 
-add_library(hwr SHARED library.cpp library.h hand_write_recognizer.h hand_write_recognizer.cpp)
+add_library(hwr SHARED library.cpp library.h hand_write_recognizer.h hand_write_recognizer.cpp base64_base.h base64_encoder.h)
